# dinomat

./: LICENSE  README.md  pyproject.toml
data/: electricdipole_electricquadrupole_magneticdipole_spheres.mat  electricdipole_spheres.mat  electricquadrupole_spheres.mat  electricquadrupole_spheres_power_sweep_001.mat  electricquadrupole_spheres_power_sweep_015.mat  electricquadrupole_spheres_power_sweep_020.mat  electricquadrupole_spheres_power_sweep_025.mat  electricquadrupole_spheres_power_sweep_035.mat
dinomat/: fresnel.py  kz.py  rt.py  util.py
examples/: parameter_retrieval.py
